# whisper-dictation

./: .cursorignore  .gitignore  .gitleaksignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  FEATURES.md  LICENSE  README.md  devenv.nix  flake.nix  pyproject.toml
.cursor/rules/: index.mdc  security.mdc
scripts/: pytest-hook.sh
src/whisper_dictation/: __init__.py  __main__.py  config.py  daemon.py  paste.py  recorder.py  transcriber.py  ui.py
systemd/: whisper-dictation.service
tests/: __init__.py  test_config.py  test_paste.py  test_recorder.py
